static/sass/components/table.scss
.info-table {
  margin-left: auto;
  margin-right: auto;
  min-width: 60%;
  max-width: 90%;
  border-collapse: collapse;

  tr {
    border: 1px solid var(--light-grey-4);

    :first-child {
      text-align: left;
    }

    :last-child {
      text-align: right;
    }
  }

  td,
  th {
    padding: .25rem 1rem;
  }

  &_status-icon {
    max-height: 3.25rem;
    aspect-ratio: 1;
  }

  &--left {
    text-align: left;
  }
}

